# ogdi

./: .cvsignore  .gitignore  .travis.yml  ChangeLog  HOWTO-RELEASE  LICENSE  NEWS  README  acinclude.m4  configure  configure.ac  configure.in  makefile  mkbindist.sh  mkogdidist.sh  modif.txt  ogdi-config.in  ogdi.pc.in  readme.sun
config/: GNU.mak  common.mak  common.mak.in  generic.mak.in  linux.mak  solaris.mak  unix.mak  win32.mak  win64.mak
contrib/gdal/: gbgetsymbol.c  gdal_serv.c  gdal_serv.h  gdalbridge.c  gdalbridge.h  makefile
contrib/ogdi_import/: dbfopen.c  makefile  ogdi_import.c  shapefil.h  shpopen.c
contrib/ogdi_info/: makefile  ogdi_info.c
include/win32/: AVDEFS.H  PAN.H  TARGET.H  avtypes.h  edat.h  heapagnt.h  pafs.h  product.h  proto.h  smrtheap.h  smrtheap.hpp  status_d.h
lib/: .cvsignore
lib/win32/: .cvsignore  lxlib.lib
ogdi/: makefile
ogdi/attr_driver/: makefile
ogdi/attr_driver/odbc/: makefile  odbc.c  odbc.h
ogdi/c-api/: client.c  ecs_capabilities.c  ecs_dyna.c  ecs_xdr.c  ecs_xdrz.c  ecsassoc.c  ecsdist.c  ecsgeo.c  ecshash.c  ecsinfo.c  ecslist.c  ecsregex.c  ecssplit.c  ecstile.c  gmath.c  gmath.h  makefile  matrix.c  ogdi.def  opendir.c  opendir.h  server.c
ogdi/datum_driver/: makefile
ogdi/datum_driver/canada/: .cvsignore  dtcanada.c  dtcanada.def  makefile  nadconv.c  nadconv.h  sdms.c
ogdi/datum_driver/usa/: dtusa.c  dtusa.def  makefile
ogdi/doc/: ogdi.ps
ogdi/driver/: makefile
ogdi/driver/adrg/: adrg.c  adrg.h  makefile  object.c  utils.c
ogdi/driver/dted/: dted.c  dted.h  makefile  object.c  utils.c
ogdi/driver/network/: ecs_clnt.c  makefile  remote.c  remote.def
ogdi/driver/network/sun/: ecs_clnt.c
ogdi/driver/rpf/: makefile  object.c  rpf.c  rpf.h  utils.c
ogdi/driver/skeleton/: makefile  object.c  open.c  skeleton.c  skeleton.h  utils.c
ogdi/driver/vrf/: feature.c  makefile  object.c  open.c  swq.c  swq.h  utils.c  vrf.c  vrf.def  vrf.h  vrfswq.c
ogdi/examples/: makefile
ogdi/examples/example1/: example1.c  makefile
ogdi/examples/example2/: example2.c  makefile
ogdi/gltpd/: asyncsvr.c  ecs_sif.c  ecs_svc.c  makefile
ogdi/gltpd/sun/: ecs_sif.c
ogdi/glutil/: RCa00246  getglenv.c  iofile.c  makefile  status_d.mak  status_d.rc
ogdi/include/: ecs.h  ecs.x  ecs_util.h  makefile
ogdi/include/sun/: ecs.h  ecs_svc.c  ecs_util.h  ecs_xdr.c
ogdi/tcl_interface/: ecs_tcl.c  makefile
proj/: biveval.c  makefile  proj.def
vpflib/: coorgeom.c  get_feat.c  makefile  musedir.c  musedir.h  reduce2.c  set.c  strfunc.c  strfunc.h  vpfbrows.c  vpfdproj.c  vpfprim.c  vpfprop.c  vpfquery.c  vpfread.c  vpfrelat.c  vpfselec.c  vpfspx.c  vpftable.c  vpftable.h  vpftidx.c  vpftidx.h  vpfwrite.c  xvt.h
vpflib/include/: machine.h
