dnl Process this file with autoconf to produce a configure script.
AC_INIT(config/unix.mak)

dnl ---------------------------------------------------------------------------
dnl	Check if we have a doomed configuration.
dnl ---------------------------------------------------------------------------

if test "$TOPDIR" = "" ; then
  AC_MSG_ERROR([Required TOPDIR environment variable not set, see README.])
fi

if test "$OS" = "Windows_NT" ; then
  AC_MSG_ERROR([Please don't use configure for Windows, see README.])
fi

dnl Checks for programs.
AC_PROG_CC

dnl We always want to check /usr/local for stuff.
LIBS="$LIBS -L/usr/local/lib"
CFLAGS="$CFLAGS -I/usr/local/include"

dnl Checks for libraries.
AC_CHECK_LIB(dl,dlopen,,,)

dnl check for various compiler flags.
AC_COMPILER_WFLAGS
AC_COMPILER_PIC
AC_LD_SHARED

dnl Strip out optimization if already added
CFLAGS=`echo "$CFLAGS " | sed "s/-O2 //"`

dnl ---------------------------------------------------------------------------
dnl	Do we have rpc/pmap_clnt.h, float.h, dlfcn.h?
dnl ---------------------------------------------------------------------------
AC_CHECK_HEADERS(rpc/pmap_clnt.h float.h dlfcn.h)

if test "$ac_cv_header_rpc_pmap_clnt_h" = yes ; then
  RPC_INCLUDES=-DHAVE_STD_RPC_INCLUDES
else
  RPC_INCLUDES=
fi
AC_SUBST(RPC_INCLUDES,$RPC_INCLUDES)

if test "$ac_cv_header_float_h" = no ; then
  CFLAGS="$CFLAGS -DMISSING_FLOAT_H"
fi
if test "$ac_cv_header_dlfcn_h" = no ; then
  CFLAGS="$CFLAGS -DMISSING_DLFCN_H"
fi

dnl ---------------------------------------------------------------------------
dnl Check endian-ness.
dnl ---------------------------------------------------------------------------
AC_C_BIGENDIAN
if test $ac_cv_c_bigendian = yes ; then
  BIG_ENDIAN=1
else
  BIG_ENDIAN=0
fi
AC_SUBST(BIG_ENDIAN,$BIG_ENDIAN)
  
dnl ---------------------------------------------------------------------------
dnl Check for libproj override.
dnl ---------------------------------------------------------------------------

PROJ_SETTING=internal
PROJ_INCLUDE=
PROJ_LIB=
export PROJ_LIB PROJ_INCLUDE PROJ_SETTING

AC_ARG_WITH(proj,[  --with-proj[=ARG]       Utilize external PROJ.4 support],,)

if test "$with_proj" = "yes" ; then

  AC_CHECK_LIB(proj,pj_init,PROJ_SETTING=external,PROJ_SETTING=missing,)
  AC_CHECK_HEADERS(projects.h)

  if test $PROJ_SETTING = missing ; then
    AC_MSG_ERROR([Unable to find external PROJ.4 library, give path or use default internal library.])
  fi
  if test "$ac_cv_header_projects_h" = no ; then
    AC_MSG_ERROR([Unable to find external PROJ.4 projects.h file, give path or use default internal library.])
  fi

  PROJ_SETTING=external
  PROJ_LIB=-lproj

elif test "$with_proj" != "no" -a "$with_proj" != "" ; then
  
  if test -r $with_proj/include/projects.h ; then
    echo "checking for $with_proj/include/projects.h ... found"
    PROJ_INCLUDE=-I$with_proj/include
  else
    AC_MSG_ERROR([Unable to find $with_proj/include/projects.h])
  fi

  if test -r $with_proj/lib/libproj.so ; then
    PROJ_LIB=$with_proj/lib/libproj.so
    echo "checking for $PROJ_LIB ... found"

  elif test -r $with_proj/lib/libproj.a ; then
    PROJ_LIB=$with_proj/lib/libproj.a
    echo "checking for $PROJ_LIB ... found"

  else
    AC_MSG_ERROR([Unable to find $with_proj/lib/libproj.{so,a}])
  fi

  PROJ_SETTING=external
  
fi

AC_ARG_WITH(projlib,[  --with-projlib=path     Select PROJ.4 library],,)

if test "$with_projlib" != "" ; then
  PROJ_LIB=$with_projlib
  PROJ_SETTING=external
  echo "Using PROJ_LIB=$PROJ_LIB for PROJ.4 library."
fi

AC_ARG_WITH(projinc,[  --with-projinc=path     Select PROJ.4 include directory],,)

if test "$with_projinc" != "" ; then
  PROJ_INCLUDE=-I${with_projinc}
  PROJ_SETTING=external
  echo "Using PROJ_INCLUDE=$PROJ_INCLUDE for PROJ.4 includes."
fi

if test "$PROJ_SETTING" = "internal" ; then
  echo "Using internal PROJ.4 implementation." 
fi

AC_SUBST(PROJ_SETTING,$PROJ_SETTING)
AC_SUBST(PROJ_INCLUDE,$PROJ_INCLUDE)
AC_SUBST(PROJ_LIB,$PROJ_LIB)

dnl ---------------------------------------------------------------------------
dnl Check for expat override, or disabling.
dnl ---------------------------------------------------------------------------

EXPAT_SETTING=internal
EXPAT_INCLUDE=
EXPAT_LIB=
export EXPAT_LIB EXPAT_INCLUDE EXPAT_SETTING

AC_ARG_WITH(expat,[  --with-expat[=ARG]      Utilize external Expat library, or disable Expat.],,)

if test "$with_expat" = "yes" ; then

  AC_CHECK_LIB(expat,XML_ParserCreate,EXPAT_SETTING=external,EXPAT_SETTING=missing,)
  AC_CHECK_HEADERS(expat.h)

  if test $EXPAT_SETTING = missing ; then
    AC_MSG_ERROR([Unable to find external Expat library, give path or use default internal library.])
  fi
  if test "$ac_cv_header_expat_h" = no ; then
    AC_MSG_ERROR([Unable to find external expat.h file, give path or use default internal library.])
  fi

  EXPAT_SETTING=external
  EXPAT_LIB=-lexpat

elif test "$with_expat" = "no" ; then
  echo "Disabled use of Expat library, and XML capabilities parsing."
  EXPAT_SETTING=disabled

elif test "$with_expat" != "" ; then
  
  if test -r $with_expat/include/expat.h ; then
    echo "checking for $with_expat/include/expat.h ... found"
    EXPAT_INCLUDE=-I$with_expat/include
  elif test -r $with_expat/expat.h ; then
    echo "checking for $with_expat/expat.h ... found"
    EXPAT_INCLUDE=-I$with_expat
  else
    AC_MSG_ERROR([Unable to find $with_expat/include/expat.h])
  fi

  if test -r $with_expat/lib/libexpat.so ; then
    EXPAT_LIB=$with_expat/lib/libexpat.so
    echo "checking for $EXPAT_LIB ... found"

  elif test -r $with_expat/lib/libexpat.a ; then
    EXPAT_LIB=$with_expat/lib/libexpat.a
    echo "checking for $EXPAT_LIB ... found"

  elif test -r $with_expat/libexpat.so ; then
    EXPAT_LIB=$with_expat/libexpat.so
    echo "checking for $EXPAT_LIB ... found"

  elif test -r $with_expat/libexpat.a ; then
    EXPAT_LIB=$with_expat/libexpat.a
    echo "checking for $EXPAT_LIB ... found"

  else
    AC_MSG_ERROR([Unable to find $with_expat/{lib/,}libexpat.{so,a}])
  fi

  EXPAT_SETTING=external
fi

AC_ARG_WITH(expatlib,[  --with-expatlib=path    Select Expat library],,)

if test "$with_expatlib" != "" ; then
  EXPAT_LIB=$with_expatlib
  EXPAT_SETTING=external
  echo "Using EXPAT_LIB=$EXPAT_LIB for Expat library."
fi

AC_ARG_WITH(expatinc,[  --with-expatinc=path    Select Expat include directory],,)

if test "$with_expatinc" != "" ; then
  EXPAT_INCLUDE=-I${with_expatinc}
  EXPAT_SETTING=external
  echo "Using EXPAT_INCLUDE=$EXPAT_INCLUDE for Expat includes."
fi

if test "$EXPAT_SETTING" = "internal" ; then
  echo "Using internal Expat implementation." 
fi

AC_SUBST(EXPAT_SETTING,$EXPAT_SETTING)
AC_SUBST(EXPAT_INCLUDE,$EXPAT_INCLUDE)
AC_SUBST(EXPAT_LIB,$PROJ_LIB)

AC_OUTPUT(config/generic.mak)
mv config/generic.mak config/`uname`.mak

